--- a/Evvy/sectors/education.html
+++ b/Evvy/sectors/education.html
@@ -40,9 +40,7 @@
 
     <header class="p_fixed_basic zidx2 ts_1 fw">
       <div class="container dflex_basic">
-        <a href="/Evvy/" class="logo"
-          ><img src="../images/logo.png" alt=""
-        /></a>
+        <a href="/" class="logo"><img src="../images/logo.png" alt="" /></a>
 
         <div class="menuicons" style="display: none">
           <a href="javascript:void();" class="shownav">
@@ -52,41 +50,37 @@
             <span class="fa-solid fa-times"></span>
           </a>
         </div>
-        <nav class="headernav" id="headnav">
+        <!-- <nav class="headernav" id="headnav">
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About Us</a></li>
             <li class="active"><a href="#services">Services</a></li>
-            <!-- <li><a href="#testimonials">Testimonials</a></li> -->
             <li><a href="#contact">Contact</a></li>
           </ul>
-        </nav>
+        </nav> -->
       </div>
     </header>
     <!--header-->
 
     <section class="sector-detail">
       <div class="container">
-        <h2>Mixed Uses</h2>
+        <div class="breadcrumb">Home > Sectors > Education</div>
+        <h2>Education</h2>
 
         <div>
           <img
-            class="img_basic_2 aspectratio_16_8 top-img"
-            src="../images/SoundVisualization2.png"
+            class="img_basic_2 aspectratio_16_9 top-img"
+            src="../images/Auditorium.png"
+            style="height: 250px; width: auto"
           />
           <div class="top-text">
             <p>
-              Both residential and commercial uses require special attention for
-              acoustical design and performance. On the residential side, people
-              expect their home to be a comfortable space with low or no noise
-              intrusion. Similarly on the commercial side, office spaces require
-              the right balance of worker’s energy and privacy. Retail
-              establishments can benefit from acoustical consideration to help
-              encourage customers to focus on merchandise or sales. When larger
-              projects bring residential and commercial spaces together, the
-              design should carefully weigh those different considerations, and
-              Acoustical Insights a partner for your team with experience in all
-              of these designs.
+              Across all ages and educational institutions, the learning
+              environment is an important space to have high quality acoustics.
+              For the teacher who strains to be heard at the back row, the
+              classroom can support clear speech for all students. Gymnasiums
+              are regularly used for assemblies in many schools, and this can
+              lead to poor sound for the audience during those gatherings.
             </p>
           </div>
         </div>
@@ -94,9 +88,17 @@
         <div class="content">
           Our services include, but are not limited to:
           <ul>
-            <li>International Building Code (IBC) design for acoustics</li>
-            <li>Mechanical Noise Control</li>
-            <li>Sound Isolation            </li>
+            <li>
+              Room acoustics for auditorium, classrooms, bandrooms, and gyms
+            </li>
+            <li>
+              Sound isolation design between classrooms, especially where music
+              practice takes place
+            </li>
+            <li>
+              Mechanical noise control so the air conditioning system does
+              prevent some students from hearing instructions
+            </li>
           </ul>
         </div>
 
@@ -104,29 +106,46 @@
           <h3>Relevant Services</h3>
           <div class="owl-carousel owl-theme relevant-services-owl-carousel">
             <div class="item">
-              <img
-                src="../images/SoundVisualization.png"
-                alt=""
-                class="img_basic imgfit_basic aspectratio_3_2"
-              />
-              <div class="text">
-                <h4>Sound and Vibration Control</h4>
-                <p>
-                  Schools, Auditoriums, Gymnasiums, Concert Halls, High End
-                  Conference Rooms, Lobbies, Ballrooms
-                </p>
-              </div>
+              <a href="sv-measurements.html">
+                <img
+                  src="../images/sound-isolation.jpg"
+                  alt=""
+                  class="img_basic imgfit_basic aspectratio_3_2"
+                />
+                <div class="text">
+                  <h4>Sound Isolation</h4>
+                  <p>Walls, Floor-Ceilings, Doors, Windows</p>
+                </div>
+              </a>
             </div>
             <div class="item">
-              <img
-                src="../images/Data_Center.jpg"
-                alt=""
-                class="img_basic imgfit_basic aspectratio_3_2"
-              />
-              <div class="text">
-                <h4>Mechanical Noise Control</h4>
-                <p>HVAC Systems, Fans, Hospitals</p>
-              </div>
+              <a>
+                <img
+                  src="../images/auditorium.jpg"
+                  alt=""
+                  class="img_basic imgfit_basic aspectratio_3_2"
+                />
+                <div class="text">
+                  <h4>Room Acoustics</h4>
+                  <p>
+                    Schools, Auditoriums, Gymnasiums, Concert Halls, High End
+                    Conference Rooms, Lobbies, Ballrooms
+                  </p>
+                </div>
+              </a>
+            </div>
+            <div class="item">
+              <a href="industrial-noise.html">
+                <img
+                  src="../images/hvac.jpg"
+                  alt=""
+                  class="img_basic imgfit_basic aspectratio_3_2"
+                />
+                <div class="text">
+                  <h4>Mechanical Noise Control</h4>
+                  <p>HVAC Systems, Fans, Pumps</p>
+                </div>
+              </a>
             </div>
           </div>
           <div class="owl-nav"></div>
