--- a/Evvy/sectors/healthcare.html
+++ b/Evvy/sectors/healthcare.html
@@ -40,7 +40,7 @@
 
     <header class="p_fixed_basic zidx2 ts_1 fw">
       <div class="container dflex_basic">
-        <a href="/Evvy/" class="logo"
+        <a href="/" class="logo"
           ><img src="../images/logo.png" alt=""
         /></a>
 
@@ -52,36 +52,41 @@
             <span class="fa-solid fa-times"></span>
           </a>
         </div>
-        <nav class="headernav" id="headnav">
+        <!-- <nav class="headernav" id="headnav">
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About Us</a></li>
             <li class="active"><a href="#services">Services</a></li>
-            <!-- <li><a href="#testimonials">Testimonials</a></li> -->
             <li><a href="#contact">Contact</a></li>
           </ul>
-        </nav>
+        </nav> -->
       </div>
     </header>
     <!--header-->
 
     <section class="sector-detail">
       <div class="container">
-        <h2>Hospitality</h2>
+        <div class="breadcrumb">
+          Home > Sectors > Healthcare
+        </div>
+        <h2>Healthcare</h2>
+
+        
 
         <div>
           <img
-            class="img_basic_2 aspectratio_16_8 top-img"
-            src="../images/HarborView.png"
+            class="img_basic_2 aspectratio_16_9 top-img"
+            src="../images/hospital.jpg"
           />
           <div class="top-text">
             <p>
-              Hotels, resorts, and other hospitality get-aways have special
-              acoustical challenges. When blending a concert hall and casino
-              with a hotel, visitors will want the best of both worlds. With
-              Acoustical Insights on the design team, we can balance these
-              challenges and design comfortable private rooms near entertainment
-              centers.
+              With HIPPA regulations and privacy an important concern for new
+              and remodeled healthcare facilities, acoustical consulting can
+              improve the experience for both medical professionals and
+              patients. Acoustical Insights has experience working on sound
+              isolation issues between patient rooms, mechanical noise from
+              building equipment, and room acoustics where auditorium are part
+              of a healthcare campus.
             </p>
           </div>
         </div>
@@ -89,9 +94,17 @@
         <div class="content">
           Our services include, but are not limited to:
           <ul>
-            <li>Room Acoustics Analysis for Concert Halls, Convention Centers, Casino Floors</li>
-            <li>Sound Isolation</li>
-            <li>Mechanical Noise Control</li>
+            <li>MRI and CT machine noise and vibration control</li>
+            <li>
+              HIPPA privacy using sound isolation design or sound masking
+              systems
+            </li>
+            <li>Mechanical Noise from building systems</li>
+            <li>
+              Exterior to Interior noise control where transportation source
+              exist near proposal medical facilties
+            </li>
+            <li>Helipad design for noise and vibration</li>
           </ul>
         </div>
 
@@ -99,29 +112,48 @@
           <h3>Relevant Services</h3>
           <div class="owl-carousel owl-theme relevant-services-owl-carousel">
             <div class="item">
-              <img
-                src="../images/SoundVisualization.png"
-                alt=""
-                class="img_basic imgfit_basic aspectratio_3_2"
-              />
-              <div class="text">
-                <h4>Sound and Vibration Control</h4>
-                <p>
-                  Schools, Auditoriums, Gymnasiums, Concert Halls, High End
-                  Conference Rooms, Lobbies, Ballrooms
-                </p>
-              </div>
+              <a href="sv-measurements.html">
+                <img
+                  src="../images/sound-isolation.jpg"
+                  alt=""
+                  class="img_basic imgfit_basic aspectratio_3_2"
+                />
+                <div class="text">
+                  <h4>Sound Isolation</h4>
+                  <p>
+                    Walls, Floor-Ceilings, Doors, Windows
+                  </p>
+                </div>
+              </a>
             </div>
             <div class="item">
-              <img
-                src="../images/Data_Center.jpg"
-                alt=""
-                class="img_basic imgfit_basic aspectratio_3_2"
-              />
-              <div class="text">
-                <h4>Mechanical Noise Control</h4>
-                <p>HVAC Systems, Fans, Hospitals</p>
-              </div>
+              <a>
+                <img
+                  src="../images/auditorium.jpg"
+                  alt=""
+                  class="img_basic imgfit_basic aspectratio_3_2"
+                />
+                <div class="text">
+                  <h4>Room Acoustics</h4>
+                  <p>
+                    Schools, Auditoriums, Gymnasiums, Concert Halls, High End
+                    Conference Rooms, Lobbies, Ballrooms
+                  </p>
+                </div>
+              </a>
+            </div>
+            <div class="item">
+              <a href="industrial-noise.html">
+                <img
+                  src="../images/hvac.jpg"
+                  alt=""
+                  class="img_basic imgfit_basic aspectratio_3_2"
+                />
+                <div class="text">
+                  <h4>Mechanical Noise Control</h4>
+                  <p>HVAC Systems, Fans, Pumps</p>
+                </div>
+              </a>
             </div>
           </div>
           <div class="owl-nav"></div>
