--- a/Evvy/sectors/hospitality.html
+++ b/Evvy/sectors/hospitality.html
@@ -32,7 +32,7 @@
     <script src="../contactform/contactform.js"></script>
   </head>
 
-  <body id="education">
+  <body id="hospitality">
     <section class="topbar flf zidx5">
       <div class="container"></div>
     </section>
@@ -40,9 +40,7 @@
 
     <header class="p_fixed_basic zidx2 ts_1 fw">
       <div class="container dflex_basic">
-        <a href="/Evvy/" class="logo"
-          ><img src="../images/logo.png" alt=""
-        /></a>
+        <a href="/" class="logo"><img src="../images/logo.png" alt="" /></a>
 
         <div class="menuicons" style="display: none">
           <a href="javascript:void();" class="shownav">
@@ -52,36 +50,37 @@
             <span class="fa-solid fa-times"></span>
           </a>
         </div>
-        <nav class="headernav" id="headnav">
+        <!-- <nav class="headernav" id="headnav">
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About Us</a></li>
             <li class="active"><a href="#services">Services</a></li>
-            <!-- <li><a href="#testimonials">Testimonials</a></li> -->
             <li><a href="#contact">Contact</a></li>
           </ul>
-        </nav>
+        </nav> -->
       </div>
     </header>
     <!--header-->
 
     <section class="sector-detail">
       <div class="container">
-        <h2>Education</h2>
+        <div class="breadcrumb">Home > Sectors > Hospitality</div>
+        <h2>Hospitality</h2>
 
         <div>
           <img
-            class="img_basic_2 aspectratio_16_8 top-img"
-            src="../images/auditorium.png"
+            class="img_basic_2 aspectratio_16_9 top-img"
+            src="../images/HarborView.png"
+            style="height: 250px; width: auto"
           />
           <div class="top-text">
             <p>
-              Across all ages and educational institutions, the learning
-              environment is an important space to have high quality acoustics.
-              For the teacher who strains to be heard at the back row, the
-              classroom can support clear speech for all students. Gymnasiums
-              are regularly used for assemblies in many schools, and this can
-              lead to poor sound for the audience during those gatherings.
+              Hotels, resorts, and other hospitality get-aways have special
+              acoustical challenges. When blending a concert hall and casino
+              with a hotel, visitors will want the best of both worlds. With
+              Acoustical Insights on the design team, we can balance these
+              challenges and design comfortable private rooms near entertainment
+              centers.
             </p>
           </div>
         </div>
@@ -89,17 +88,11 @@
         <div class="content">
           Our services include, but are not limited to:
           <ul>
+            <li>Room Acoustics Analysis for Concert Halls, Convention Centers, Casino Floors</li>
             <li>
-              Room acoustics for auditorium, classrooms, bandrooms, and gyms
+              Sound Isolation
             </li>
-            <li>
-              Sound isolation design between classrooms, especially where music
-              practice takes place
-            </li>
-            <li>
-              Mechanical noise control so the air conditioning system does
-              prevent some students from hearing instructions
-            </li>
+            <li>Mechanical Noise Control</li>
           </ul>
         </div>
 
@@ -107,29 +100,46 @@
           <h3>Relevant Services</h3>
           <div class="owl-carousel owl-theme relevant-services-owl-carousel">
             <div class="item">
-              <img
-                src="../images/SoundVisualization.png"
-                alt=""
-                class="img_basic imgfit_basic aspectratio_3_2"
-              />
-              <div class="text">
-                <h4>Sound and Vibration Control</h4>
-                <p>
-                  Schools, Auditoriums, Gymnasiums, Concert Halls, High End
-                  Conference Rooms, Lobbies, Ballrooms
-                </p>
-              </div>
+              <a href="sv-measurements.html">
+                <img
+                  src="../images/sound-isolation.jpg"
+                  alt=""
+                  class="img_basic imgfit_basic aspectratio_3_2"
+                />
+                <div class="text">
+                  <h4>Sound Isolation</h4>
+                  <p>Walls, Floor-Ceilings, Doors, Windows</p>
+                </div>
+              </a>
             </div>
             <div class="item">
-              <img
-                src="../images/Data_Center.jpg"
-                alt=""
-                class="img_basic imgfit_basic aspectratio_3_2"
-              />
-              <div class="text">
-                <h4>Mechanical Noise Control</h4>
-                <p>HVAC Systems, Fans, Hospitals</p>
-              </div>
+              <a>
+                <img
+                  src="../images/auditorium.jpg"
+                  alt=""
+                  class="img_basic imgfit_basic aspectratio_3_2"
+                />
+                <div class="text">
+                  <h4>Room Acoustics</h4>
+                  <p>
+                    Schools, Auditoriums, Gymnasiums, Concert Halls, High End
+                    Conference Rooms, Lobbies, Ballrooms
+                  </p>
+                </div>
+              </a>
+            </div>
+            <div class="item">
+              <a href="industrial-noise.html">
+                <img
+                  src="../images/hvac.jpg"
+                  alt=""
+                  class="img_basic imgfit_basic aspectratio_3_2"
+                />
+                <div class="text">
+                  <h4>Mechanical Noise Control</h4>
+                  <p>HVAC Systems, Fans, Pumps</p>
+                </div>
+              </a>
             </div>
           </div>
           <div class="owl-nav"></div>
