--- a/Evvy/services/sv-measurements.html
+++ b/Evvy/services/sv-measurements.html
@@ -40,7 +40,7 @@
 
     <header class="p_fixed_basic zidx2 ts_1 fw">
       <div class="container dflex_basic">
-        <a href="/Evvy" class="logo"
+        <a href="/" class="logo"
           ><img src="../images/logo.png" alt=""
         /></a>
 
@@ -52,90 +52,60 @@
             <span class="fa-solid fa-times"></span>
           </a>
         </div>
-        <nav class="headernav" id="headnav">
+        <!-- <nav class="headernav" id="headnav">
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About Us</a></li>
             <li class="active"><a href="#services">Services</a></li>
-            <!-- <li><a href="#testimonials">Testimonials</a></li> -->
             <li><a href="#contact">Contact</a></li>
           </ul>
-        </nav>
+        </nav> -->
       </div>
     </header>
     <!--header-->
 
-    <section class="sector-detail">
+    <section class="sector-detail sector-detail-sv">
       <div class="container">
-        <h2>Healthcare</h2>
+        <div class="breadcrumb">Home > Services > Sound and Vibration Measurements</div>
+        <h2>Sound and Vibration Measurements</h2>
 
-        <div>
-          <img
-            class="img_basic_2 aspectratio_16_8 top-img"
-            src="../images/MechanicalNoise.jpg"
-          />
+        <div class="top-content">
           <div class="top-text">
             <p>
-              With HIPPA regulations and privacy an important concern for new
-              and remodeled healthcare facilities, acoustical consulting can
-              improve the experience for both medical professionals and
-              patients. Acoustical Insights has experience working on sound
-              isolation issues between patient rooms, mechanical noise from
-              building equipment, and room acoustics where auditorium are part
-              of a healthcare campus.
+              Environmental Noise is a concern at national, regional, and local
+              levels. Acoustical Insights has experience documenting noise
+              impact for NEPA and proposing mitigation measures to assure
+              projects have no adverse impacts. Similarly, in California, Chris
+              has work on CEQA projects all across the state.
             </p>
-          </div>
-        </div>
-
-        <div class="content">
-          Our services include, but are not limited to:
-          <ul>
-            <li>MRI and CT machine noise and vibration control</li>
-            <li>
-              HIPPA privacy using sound isolation design or sound masking
-              systems
-            </li>
-            <li>Mechanical Noise from building systems</li>
-            <li>
-              Exterior to Interior noise control where transportation source
-              exist near proposal medical facilties
-            </li>
-            <li>Helipad design for noise and vibration</li>
-          </ul>
-        </div>
-
-        <div class="relevant-services">
-          <h3>Relevant Services</h3>
-          <div class="owl-carousel owl-theme relevant-services-owl-carousel">
-            <div class="item">
-              <img
-                src="../images/SoundVisualization.png"
-                alt=""
-                class="img_basic imgfit_basic aspectratio_3_2"
-              />
-              <div class="text">
-                <h4>Sound and Vibration Control</h4>
-                <p>
-                  Schools, Auditoriums, Gymnasiums, Concert Halls, High End
-                  Conference Rooms, Lobbies, Ballrooms
-                </p>
-              </div>
+            <div class="content">
+              Our services include, but are not limited to:
+              <ul>
+                <li>STC and NIC tests (walls and ceilings)</li>
+                <li>IIC tests (floor-ceiling impact rating)</li>
+                <li>NC measurements (background sound level indoors)</li>
+                <li>RT (Reverberation Time) measurements</li>
+                <li>Machinery noise and vibration</li>
+                <li>Environmental noise measurements (short and long term)</li>
+                <li>Product noise testing</li>
+                <li>
+                  Workplace noise levels (short-term measurements and personal
+                  dosimetry)
+                </li>
+                <li>Specification compliance testing</li>
+                <li>Noise ordinance compliance measurements</li>
+              </ul>
             </div>
-            <div class="item">
-              <img
-                src="../images/Data_Center.jpg"
-                alt=""
-                class="img_basic imgfit_basic aspectratio_3_2"
-              />
-              <div class="text">
-                <h4>Mechanical Noise Control</h4>
-                <p>HVAC Systems, Fans, Hospitals</p>
-              </div>
-            </div>
-            
           </div>
-          <div class="owl-nav">
-
+          <div class="top-imgs">
+            <img
+              class="img_basic_2 aspectratio_16_8 top-img"
+              src="../images/SoundVisualization2.png"
+            />
+            <img
+              class="img_basic_2 aspectratio_16_9 top-img"
+              src="../images/meter.jpg"
+            />
           </div>
         </div>
       </div>
