--- a/Evvy/index.html
+++ b/Evvy/index.html
@@ -61,8 +61,8 @@
           <ul>
             <li class="active"><a href="#home">Home</a></li>
             <li><a href="#about">About Us</a></li>
+            <li><a href="#sectors">Sectors</a></li>
             <li><a href="#services">Services</a></li>
-            <!-- <li><a href="#testimonials">Testimonials</a></li> -->
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
@@ -81,7 +81,7 @@
             alt=""
             class="img_basic imgfit_basic aspectratio_16_8"
           />
-          <div class="note">An auditorium</div>
+          <div class="note">Room Acoustics for Auditoriums</div>
         </div>
         <div class="item">
           <img
@@ -89,7 +89,7 @@
             alt=""
             class="img_basic imgfit_basic aspectratio_16_8"
           />
-          <div class="note">A helipad</div>
+          <div class="note">Noise Control for Aircraft</div>
         </div>
         <div class="item">
           <img
@@ -97,7 +97,9 @@
             alt=""
             class="img_basic imgfit_basic aspectratio_16_8"
           />
-          <div class="note">An MRI Machine</div>
+          <div class="note">
+            Noise and Vibration Analysis for Medical Equipment
+          </div>
         </div>
       </div>
     </section>
@@ -111,15 +113,19 @@
             <h3>Christopher Barnobi</h3>
             <!-- <h5 class="afterborder_1">A Team of 100+ Professionals</h5> -->
             <p>
-              Christopher Barnobi, PE is an acoustical engineer with over 15
-              years of experience. He enjoys working with clients of all types
-              to identify and solve noise and vibration problems.
+              Christopher has more than 15 years of experience in applied
+              acoustical engineering. His work has included the analysis of
+              sound generating sources, assessments of community and
+              occupational noise levels, quantification of vibration levels from
+              industrial equipment, and design input for interior space
+              acoustical performance. He has conducted sound level measurements
+              and modeling for a variety of sectors.
             </p>
           </div>
 
           <div class="imagearea">
             <img
-              src="images/headshot.jpg"
+              src="images/headshot.png"
               alt=""
               class="img_basic imgfit_basic aspectratio_1_1"
             />
@@ -145,13 +151,18 @@
         <div class="item">
           <span class="fa-solid fa-star icon"></span>
           <h4>Credentials</h4>
-          <h5>INCE Bd Cert. and PE</h5>
+          <h5>
+            Professional Acoustical Engineer (PE) as recognized by the State of
+            Oregon <br />
+            Board Certified by The Institute of Noise Control Engineers (INCE
+            Bd. Cert.)
+          </h5>
         </div>
 
         <div class="item" id="team">
           <span class="fa-solid fa-person icon"></span>
           <h4>Team Player</h4>
-          <h5 id="team">Experience in a wide range of sizes and styles</h5>
+          <h5 id="team">Experience in a wide range of team sizes and styles</h5>
         </div>
       </div>
     </section>
@@ -195,13 +206,13 @@
       </div>
     </section>
 
-    <section class="sectors">
+    <section class="sectors" id="sectors">
       <div class="container">
         <h2>Sectors</h2>
 
         <div class="dgrid_basic">
           <div class="item">
-            <a href="services-sectors/healthcare.html">
+            <a href="sectors/healthcare.html">
               <div>
                 <span class="fa-solid fa-stethoscope icon"></span>
                 <h4>Healthcare</h4>
@@ -209,21 +220,27 @@
             </a>
           </div>
           <div class="item">
-            <a href="services-sectors/education.html">
+            <a href="sectors/education.html">
               <span class="fa-solid fa-graduation-cap icon"></span>
               <h4>Education</h4>
             </a>
           </div>
           <div class="item">
-            <a href="services-sectors/environment.html">
+            <a href="sectors/environment.html">
               <span class="fa-solid fa-tree icon"></span>
               <h4>Environment</h4>
             </a>
           </div>
           <div class="item">
-            <a href="services-sectors/hospitality.html">
-              <span class="fa-solid fa-building icon"></span>
+            <a href="sectors/hospitality.html">
+              <span class="fa-solid fa-swimming-pool icon"></span>
               <h4>Hospitality</h4>
+            </a>
+          </div>
+          <div class="item">
+            <a href="sectors/mixed-use.html">
+              <span class="fa-solid fa-building icon"></span>
+              <h4>Mixed Use</h4>
             </a>
           </div>
         </div>
@@ -236,7 +253,7 @@
 
         <div class="service_items dflex_basic_2 dflex_wrap">
           <div class="item">
-            <a href="services-sectors/sv-measurements.html">
+            <a href="services/sv-measurements.html">
               <div class="itemcontent flf">
                 <div class="thumb flf">
                   <img
@@ -257,17 +274,35 @@
           </div>
 
           <div class="item">
-            <a href="services-sectors/mixed-use.html">
+            <a href="services/mech-noise.html">
               <div class="itemcontent flf">
                 <div class="thumb flf">
                   <img
-                    src="images/OpenOffice.jpg"
+                    src="images/Data_Center.jpg"
                     alt=""
                     class="img_basic imgfit_basic aspectratio_3_2"
                   />
                 </div>
                 <div class="text flf">
-                  <h3>Mixed Use</h3>
+                  <h3>Mechanical Noise Control</h3>
+                  <p>HVAC Systems, Fans, Hospitals</p>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div class="item">
+            <a href="services/industrial-noise.html">
+              <div class="itemcontent flf">
+                <div class="thumb flf">
+                  <img
+                    src="images/Industrial.jpg"
+                    alt=""
+                    class="img_basic imgfit_basic aspectratio_3_2"
+                  />
+                </div>
+                <div class="text flf">
+                  <h3>Industrial Noise Control</h3>
                   <p></p>
                 </div>
               </div>
@@ -275,33 +310,17 @@
           </div>
 
           <div class="item">
-            <div class="itemcontent flf">
-              <div class="thumb flf">
-                <img
-                  src="images/Data_Center.jpg"
-                  alt=""
-                  class="img_basic imgfit_basic aspectratio_3_2"
-                />
-              </div>
-              <div class="text flf">
-                <h3>Mechanical Noise Control</h3>
-                <p>HVAC Systems, Fans, Hospitals</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="item">
-            <a href="services-sectors/industrial-noise.html">
+            <a href="services/room-acoustics.html">
               <div class="itemcontent flf">
                 <div class="thumb flf">
                   <img
-                    src="images/Traffic.jpg"
+                    src="images/Auditorium.png"
                     alt=""
                     class="img_basic imgfit_basic aspectratio_3_2"
                   />
                 </div>
                 <div class="text flf">
-                  <h3>Industrial Noise Control</h3>
+                  <h3>Room Acoustics</h3>
                   <p></p>
                 </div>
               </div>
@@ -426,6 +445,49 @@
               required
             />
             <textarea name="message" placeholder="Message..."></textarea>
+            <!-- <table
+              width="400"
+              border="0"
+              align="center"
+              cellpadding="5"
+              cellspacing="1"
+              class="table"
+            >
+              <?php if(isset($msg)){?>
+              <tr>
+                <td colspan="2" align="center" valign="top">
+                  <?php echo $msg;?>
+                </td>
+              </tr>
+              <?php } ?>
+              <tr>
+                <td align="right" valign="top">Validation code:</td>
+                <td>
+                  <img
+                    src="captcha.php?rand=<?php echo rand();?>"
+                    id="captchaimg"
+                  /><br />
+                  <label for="message">Enter the code above here :</label>
+                  <br />
+                  <input id="captcha_code" name="captcha_code" type="text" />
+                  <br />
+                  Can't read the image? click
+                  <a href="javascript: refreshCaptcha();">here</a> to refresh.
+                </td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>
+                  <input
+                    name="Submit"
+                    type="submit"
+                    onclick="return validate();"
+                    value="Submit"
+                    class="button1"
+                  />
+                </td>
+              </tr>
+            </table> -->
             <button name="submit" id="contactform_btn" type="submit">
               Send Message <span class="fa-solid fa-angle-right"></span>
             </button>
