--- a/Evvy/sectors/environment.html
+++ b/Evvy/sectors/environment.html
@@ -40,7 +40,7 @@
 
     <header class="p_fixed_basic zidx2 ts_1 fw">
       <div class="container dflex_basic">
-        <a href="/Evvy/" class="logo"
+        <a href="/" class="logo"
           ><img src="../images/logo.png" alt=""
         /></a>
 
@@ -52,27 +52,30 @@
             <span class="fa-solid fa-times"></span>
           </a>
         </div>
-        <nav class="headernav" id="headnav">
+        <!-- <nav class="headernav" id="headnav">
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About Us</a></li>
             <li class="active"><a href="#services">Services</a></li>
-            <!-- <li><a href="#testimonials">Testimonials</a></li> -->
             <li><a href="#contact">Contact</a></li>
           </ul>
-        </nav>
+        </nav> -->
       </div>
     </header>
     <!--header-->
 
     <section class="sector-detail">
       <div class="container">
-        <h2>Sound and Vibration Measurements</h2>
+        <div class="breadcrumb">
+          Home > Sectors > Healthcare
+        </div>
+        <h2>Environmental Noise Assessments</h2>
 
         <div>
           <img
             class="img_basic_2 aspectratio_16_8 top-img"
-            src="../images/SoundVisualization2.png"
+            src="../images/auditorium.png"
+            style="height: 250px; width: auto;"
           />
           <div class="top-text">
             <p>
@@ -88,51 +91,14 @@
         <div class="content">
           Our services include, but are not limited to:
           <ul>
-            <li>STC and NIC tests (walls and ceilings)</li>
-            <li>IIC tests (floor-ceiling impact rating)</li>
-            <li>NC measurements (background sound level indoors)</li>
-            <li>RT (Reverberation Time) measurements</li>
-            <li>Machinery noise and vibration</li>
-            <li>Environmental noise measurements (short and long term)</li>
-            <li>Product noise testing</li>
-            <li>Workplace noise levels (short-term measurements and personal dosimetry)</li>
-            <li>Specification compliance testing</li>
-            <li>Noise ordinance compliance measurements</li>
+            <li>Auto traffic noise assessments</li>
+            <li>Aircraft noise assessments</li>
+            <li>Mechanical Noise assessments</li>
+            <li>Construction Noise Analysis, Mitigation, and Monitoring</li>
           </ul>
-          
         </div>
 
-        <div class="relevant-services">
-          <h3>Relevant Services</h3>
-          <div class="owl-carousel owl-theme relevant-services-owl-carousel">
-            <div class="item">
-              <img
-                src="../images/SoundVisualization.png"
-                alt=""
-                class="img_basic imgfit_basic aspectratio_3_2"
-              />
-              <div class="text">
-                <h4>Sound and Vibration Control</h4>
-                <p>
-                  Schools, Auditoriums, Gymnasiums, Concert Halls, High End
-                  Conference Rooms, Lobbies, Ballrooms
-                </p>
-              </div>
-            </div>
-            <div class="item">
-              <img
-                src="../images/Data_Center.jpg"
-                alt=""
-                class="img_basic imgfit_basic aspectratio_3_2"
-              />
-              <div class="text">
-                <h4>Mechanical Noise Control</h4>
-                <p>HVAC Systems, Fans, Hospitals</p>
-              </div>
-            </div>
-          </div>
-          <div class="owl-nav"></div>
-        </div>
+        
       </div>
     </section>
     <footer class="flf">
