--- a/Evvy/services/industrial-noise.html
+++ b/Evvy/services/industrial-noise.html
@@ -32,7 +32,7 @@
     <script src="../contactform/contactform.js"></script>
   </head>
 
-  <body id="healthcare">
+  <body id="industrial-noise">
     <section class="topbar flf zidx5">
       <div class="container"></div>
     </section>
@@ -40,7 +40,7 @@
 
     <header class="p_fixed_basic zidx2 ts_1 fw">
       <div class="container dflex_basic">
-        <a href="/Evvy/" class="logo"
+        <a href="/" class="logo"
           ><img src="../images/logo.png" alt=""
         /></a>
 
@@ -52,35 +52,33 @@
             <span class="fa-solid fa-times"></span>
           </a>
         </div>
-        <nav class="headernav" id="headnav">
+        <!-- <nav class="headernav" id="headnav">
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About Us</a></li>
             <li class="active"><a href="#services">Services</a></li>
-            <!-- <li><a href="#testimonials">Testimonials</a></li> -->
             <li><a href="#contact">Contact</a></li>
           </ul>
-        </nav>
+        </nav> -->
       </div>
     </header>
     <!--header-->
 
     <section class="sector-detail">
       <div class="container">
-        <h2>Environment</h2>
+        <h2>Industrial Noise</h2>
 
         <div>
           <img
-            class="img_basic_2 aspectratio_16_8 top-img"
-            src="../images/auditorium.png"
+            class="img_basic_2 aspectratio_16_9 top-img"
+            src="../images/Industrial.jpg"
           />
           <div class="top-text">
             <p>
-              Environmental Noise is a concern at national, regional, and local
-              levels. Acoustical Insights has experience documenting noise
-              impact for NEPA and proposing mitigation measures to assure
-              projects have no adverse impacts. Similarly, in California, Chris
-              has work on CEQA projects all across the state.
+              Acoustical Insights offers a variety of industrial noise and
+              vibration analyses and control services. We have experience
+              designing, measuring, and mitigating noise and vibration on large
+              industrial facilities and smaller local equipment.
             </p>
           </div>
         </div>
@@ -88,10 +86,9 @@
         <div class="content">
           Our services include, but are not limited to:
           <ul>
-            <li>Auto traffic noise assessments</li>
-            <li>Aircraft noise assessments</li>
-            <li>Mechanical Noise assessments</li>
-            <li>Construction Noise Analysis, Mitigation, and Monitoring</li>
+            <li>Noise Impact Studies</li>
+            <li>OSHA compliance analysis and testing</li>
+            <li>Property Line noise and vibration modeling and measurements</li>
           </ul>
         </div>
 
@@ -99,29 +96,48 @@
           <h3>Relevant Services</h3>
           <div class="owl-carousel owl-theme relevant-services-owl-carousel">
             <div class="item">
-              <img
-                src="../images/SoundVisualization.png"
-                alt=""
-                class="img_basic imgfit_basic aspectratio_3_2"
-              />
-              <div class="text">
-                <h4>Sound and Vibration Control</h4>
-                <p>
-                  Schools, Auditoriums, Gymnasiums, Concert Halls, High End
-                  Conference Rooms, Lobbies, Ballrooms
-                </p>
-              </div>
+              <a href="sv-measurements.html">
+                <img
+                  src="../images/sound-isolation.jpg"
+                  alt=""
+                  class="img_basic imgfit_basic aspectratio_3_2"
+                />
+                <div class="text">
+                  <h4>Sound Isolation</h4>
+                  <p>
+                    Walls, Floor-Ceilings, Doors, Windows
+                  </p>
+                </div>
+              </a>
             </div>
             <div class="item">
-              <img
-                src="../images/Data_Center.jpg"
-                alt=""
-                class="img_basic imgfit_basic aspectratio_3_2"
-              />
-              <div class="text">
-                <h4>Mechanical Noise Control</h4>
-                <p>HVAC Systems, Fans, Hospitals</p>
-              </div>
+              <a>
+                <img
+                  src="../images/SoundVisualization.png"
+                  alt=""
+                  class="img_basic imgfit_basic aspectratio_3_2"
+                />
+                <div class="text">
+                  <h4>Sound and Vibrational Measurements</h4>
+                  <p>
+                    <!-- Schools, Auditoriums, Gymnasiums, Concert Halls, High End
+                    Conference Rooms, Lobbies, Ballrooms -->
+                  </p>
+                </div>
+              </a>
+            </div>
+            <div class="item">
+              <a href="industrial-noise.html">
+                <img
+                  src="../images/hvac.jpg"
+                  alt=""
+                  class="img_basic imgfit_basic aspectratio_3_2"
+                />
+                <div class="text">
+                  <h4>Mechanical Noise Control</h4>
+                  <p>HVAC Systems, Fans, Pumps</p>
+                </div>
+              </a>
             </div>
           </div>
           <div class="owl-nav"></div>
