--- a/Evvy/index.html
+++ b/Evvy/index.html
@@ -37,7 +37,7 @@ include 'contactform/captcha.php';
       rel="stylesheet"
     />
 
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="icon" type="image/ico" href="images/brand.ico" />
 
     <link rel="stylesheet" href="owl-slider/assets/owl.carousel.min.css" />
     <link rel="stylesheet" href="owl-slider/assets/owl.theme.default.min.css" />
@@ -48,11 +48,6 @@ include 'contactform/captcha.php';
     <link href="style-global.css" rel="stylesheet" type="text/css" />
     <link href="style-responsive.css" rel="stylesheet" type="text/css" />
 
-    <script
-      src="https://www.google.com/recaptcha/enterprise.js"
-      async
-      defer
-    ></script>
     <script src="js/jquery.js"></script>
     <script src="owl-slider/owl.carousel.js"></script>
     <script src="js/scripts.js"></script>
@@ -398,7 +393,7 @@ include 'contactform/captcha.php';
     <footer class="flf">
       <div class="container dflex_basic dflex_wrap">
         <div class="copyright">
-          Copyright &copy; <span class="year"></span> 2024 <br />
+          Copyright &copy; <span class="year"></span> 2025 <br />
           Christopher Barnobi - Acoustical Insights
         </div>
       </div>
