--- a/Evvy/sectors/healthcare.html
+++ b/Evvy/sectors/healthcare.html
@@ -34,7 +34,7 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="icon" type="image/ico" href="../images/brand.ico" />
 
     <link rel="stylesheet" href="../owl-slider/assets/owl.carousel.min.css" />
     <link
@@ -65,23 +65,6 @@
         <a href="/" class="logo"
           ><img src="../images/logo.png" alt=""
         /></a>
-
-        <div class="menuicons" style="display: none">
-          <a href="javascript:void();" class="shownav">
-            <span class="fa-solid fa-bars"></span>
-          </a>
-          <a href="javascript:void();" class="hidenav" style="display: none">
-            <span class="fa-solid fa-times"></span>
-          </a>
-        </div>
-        <!-- <nav class="headernav" id="headnav">
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About Us</a></li>
-            <li class="active"><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </nav> -->
       </div>
     </header>
     <!--header-->
@@ -185,7 +168,7 @@
     <footer class="flf">
       <div class="container dflex_basic dflex_wrap">
         <div class="copyright">
-          Copyright &copy; <span class="year"></span> 2024 <br />
+          Copyright &copy; <span class="year"></span> 2025 <br />
           Christopher Barnobi - Acoustical Insights
         </div>
       </div>
