--- a/Evvy/services/sv-measurements.html
+++ b/Evvy/services/sv-measurements.html
@@ -43,7 +43,7 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="icon" type="image/ico" href="../images/brand.ico" />
 
     <link rel="stylesheet" href="../owl-slider/assets/owl.carousel.min.css" />
     <link
@@ -74,15 +74,6 @@
         <a href="/" class="logo"
           ><img src="../images/logo.png" alt=""
         /></a>
-
-        <div class="menuicons" style="display: none">
-          <a href="javascript:void();" class="shownav">
-            <span class="fa-solid fa-bars"></span>
-          </a>
-          <a href="javascript:void();" class="hidenav" style="display: none">
-            <span class="fa-solid fa-times"></span>
-          </a>
-        </div>
       </div>
     </header>
     <!--header-->
@@ -136,7 +127,7 @@
     <footer class="flf">
       <div class="container dflex_basic dflex_wrap">
         <div class="copyright">
-          Copyright &copy; <span class="year"></span> 2024 <br />
+          Copyright &copy; <span class="year"></span> 2025 <br />
           Christopher Barnobi - Acoustical Insights
         </div>
       </div>
