--- a/Evvy/services/room-acoustics.html
+++ b/Evvy/services/room-acoustics.html
@@ -43,7 +43,7 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" type="image/png" href="images/favicon.png" />
+    <link rel="icon" type="image/ico" href="../images/brand.ico" />
 
     <link rel="stylesheet" href="../owl-slider/assets/owl.carousel.min.css" />
     <link
@@ -72,23 +72,6 @@
     <header class="p_fixed_basic zidx2 ts_1 fw">
       <div class="container dflex_basic">
         <a href="/" class="logo"><img src="../images/logo.png" alt="" /></a>
-
-        <div class="menuicons" style="display: none">
-          <a href="javascript:void();" class="shownav">
-            <span class="fa-solid fa-bars"></span>
-          </a>
-          <a href="javascript:void();" class="hidenav" style="display: none">
-            <span class="fa-solid fa-times"></span>
-          </a>
-        </div>
-        <!-- <nav class="headernav" id="headnav">
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About Us</a></li>
-            <li class="active"><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </nav> -->
       </div>
     </header>
     <!--header-->
@@ -139,7 +122,7 @@
                 </a>
               </div>
               <div class="item">
-                <a>
+                <a href="sv-measurements.html">
                   <img
                     src="../images/SoundVisualization.png"
                     alt=""
@@ -175,7 +158,7 @@
     <footer class="flf">
       <div class="container dflex_basic dflex_wrap">
         <div class="copyright">
-          Copyright &copy; <span class="year"></span> 2024 <br />
+          Copyright &copy; <span class="year"></span> 2025 <br />
           Christopher Barnobi - Acoustical Insights
         </div>
       </div>
